Add autofocus to input

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -44,7 +44,7 @@
       </div>
       <div class="gamePlay">
         <form class="guessContainer" action="/guess" method="post">
-          <input type="text" name="guessInput" value="">
+          <input type="text" name="guessInput" value="" autofocus>
           <input type="submit" name="guessSubmit" value="Make a guess">
         </form>
 
